--- a/test.tex
+++ b/test.tex
@@ -58,7 +58,7 @@ $^9$Lecturer at Ecole Nationale Superieure d'Architecture Paris Malaquais, Franc
 \medskip
 {\small\parbox{11cm}{%
 \hfill To the memory of Sir Michael Atiyah\\
-The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, inverting the anthropic principle and interpreting the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the Holographic Principle defines the Grandcosmos and a $10^{61}$ Trans-Plankian quantified time. This resolves at last the vacuum energy dilemma and confirms the matter-antimatter Oscillatory Bounce. The mathematics-physics fusion is proved by $10^{-9}$ precise relations, implying the Eddington's constant 137 and the Atiyah's one, showing Four Force Unification. The Holic Principle and Eddington's Theory must unlock Particle Physics, with massive gluons and composite d quark. The standard evolutionary cosmology, based on the imperfect cosmological principle, will be excluded by the observation of mature galaxies in the very far-field, and also by the invariance of the CMB temperature.  
+The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, inverting the anthropic principle and interpreting the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the Holographic Principle defines the Grandcosmos and a $10^{61}$ trans-Plankian quantified time. This resolves at last the vacuum energy dilemma and confirms the matter-antimatter Oscillatory Bounce. The mathematics-physics fusion is proved by $10^{-9}$ precise relations, implying the Eddington's constant 137 and the Atiyah's one, showing Four Force Unification. The Holic Principle and Eddington's Theory must unlock Particle Physics, with massive gluons and composite d quark. The standard evolutionary cosmology, based on the imperfect cosmological principle, will be excluded by the observation of mature galaxies in the very far-field, and also by the invariance of the CMB temperature.  
 
 %Mature galaxies will be found in the far-field instead of a dark space, rejecting thus the evolutionary cosmology, ill-founded %o%%n the imperfect cosmological principle.
 
@@ -142,21 +142,21 @@ It was observed that the physical constants are tightly contrived, but only thre
 
 One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependencies on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from known physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
 
-The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a more fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed firstly \cite{Eddington}, must be permanent}. Extending this to the spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology and the basis of Coherent Cosmology \cite{Sanchez1}.
+The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed firstly \cite{Eddington}, must be permanent}. Extending this to the standard spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology and the basis of Coherent Cosmology \cite{Sanchez1}.
 
 So Eddington considered rightly the Cosmic Large Number correlations, as recalled in this article. However, his work was rejected for obscure reasons and this rejection was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed since far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Thus, through the above Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
 
-The present article shows that \textit{Physics is a unique part of Mathematics, which are presently incomplete}, refuting the Multiverse Hypothesis by very precise fine-tuning ($10^{-9})$ between main physical and mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, this study confirms the super-string theory, but with complete rehabilitation of the \textit{tachyonic} bosonic string theory.
+The present article shows that \textit{Physics is a unique part of Mathematics, which are presently incomplete}, refuting the Multiverse Hypothesis by very precise fine-tuning (untill $10^{-9})$ between main physical and mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, this study confirms the super-string theory, but with complete rehabilitation of the \textit{tachyonic} bosonic string theory.
 
 \textit{A decisive point of physics is the energy conservation, the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions: why one asks questions? We propose that the parameters are optimal base in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics and triple-point temperatures of mammals and main molecules \cite{Sanchez1}.
 
 \textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the standard Copenhagen statistical interpretation of quantum mechanics.
 
-The fact that three parameters, among 30, are so clearly emerging means that physics, and more generally science, follows a hierarchical order: \textit{one can progress without knowing the details of the underlying fundamental theory.}
+The fact that three parameters, among 30, are so clearly emerging means that physics, and more generally science, follows a Hierarchical Principle: \textit{one can progress without knowing the details of the underlying fundamental theory.}
 
 So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he anticipated genetics. 
 
-In the same manner, this article prefigures \textit{the fundamental theory, but precising its arithmetical foundation: the Holic Principle}, recalled in section 6. Thus, there must exist multi-base algorithms able to explain the compatibility between these two principles, which seems at first sight contradictory. 
+In the same manner, this article prefigures \textit{the fundamental theory, but precising its arithmetical foundation: the Holic Principle}, recalled in section 6. Thus, there must exist multi-base algorithms able to explain the compatibility between these two principles, Hierarchy and Computation, which seems at first sight contradictory. 
 
 
 \begin{figure*}
