--- a/test.tex
+++ b/test.tex
@@ -205,7 +205,7 @@ $$
 \sim (\lambdabar_{e}/ l_{Gl} )^{64} \sim (\lambdabar_{str} /\lambdabar_{e} )^{128} \sim 2^{256}\\ % 3rd row
 \end{array}
 $$
-These series include the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$, with mass about 2 MeV. Hence, the correlation is eight-fold, including, apart from the two above relationships, three relations that have been independently reported \cite{Sanchez1}. The overall large number $2^{256}$ has an obvious computational characteristic, confirmed below by the dramatic appearance of the Eddington Large Number.
+This series include the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$, with mass about 2 MeV. Hence, the correlation is eight-fold, including, apart from the two above relationships, three relations that have been independently reported \cite{Sanchez1}. The overall large number $2^{256}$ has an obvious computational characteristic, confirmed below by the dramatic appearance of the Eddington Large Number.
 
 In particular, the relation $R/\lambdabar_{e} \sim (\lambda_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation that is incompatible with the standard evolutionary cosmology. By this order of magnitude, we infer rather precise relations. With the Hydrogen radius $r_H$, we infer 
 $ R/r_H \approx (4\pi \lambda_{CMB}/r_H)^{4}$, precise to $0.6\%$. 
@@ -218,7 +218,7 @@ R/(\lambdabar_{p}\lambdabar_{H})^{1/2}\approx (WZ)^4
 \end{equation}
 where $\lambdabar_{p}$ and $\lambdabar_{H}$ are the Proton and Hydrogen reduced wavelengths. The precision of this formula will be pulled to the ppb range in section 9.4, by intervention of canonical mathematical constants.
 
-The gravitational Hydrogen molecule model \cite{Sanchez1} implies the following double correlation, which is the simplest case of Eddington's statistical theory \cite{Eddy}: the position of a `reference particle` is supposed to be determined 
+The gravitational Hydrogen molecule model \cite{Sanchez1} implies the following double correlation, which is the simplest case of Eddington's statistical theory \cite{Eddington}: the position of a `reference particle` is supposed to be determined 
 with an uncertainty of ${R/2}$. 
 For N particles of mass $m$ components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If $m$ is the effective mass of the electron in the Hydrogen atom, $ m = m^{\prime}_{e} = m_{e} p/H$, and if, moreover, one equate the deviance $R/(2\sqrt{(M/m^{\prime}_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c m_{H}$, one obtains the double relation:
 \begin{equation}
