--- a/test.tex
+++ b/test.tex
@@ -220,7 +220,7 @@ where $\lambdabar_{p}$ and $\lambdabar_{H}$ are the Proton and Hydrogen reduced 
 
 The gravitational Hydrogen molecule model \cite{Sanchez1} implies the following double correlation, which is the simplest case of Eddington's statistical theory \cite{Eddington}: the position of a `reference particle` is supposed to be determined 
 with an uncertainty of ${R/2}$. 
-For N particles of mass $m$ components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If $m$ is the effective mass of the electron in the Hydrogen atom, $ m = m^{\prime}_{e} = m_{e} p/H$, and if, moreover, one equate the deviance $R/(2\sqrt{(M/m^{\prime}_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c m_{H}$, one obtains the double relation:
+For N particles of mass $m$ components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If $m$ is the principalvalue of the effective mass of the electron in the Hydrogen atom, $ m = m^{\prime}_{e} = m_{e} m_p/m_H $, and if, moreover, one equates the deviance $R/(2\sqrt{(M/m^{\prime}_{e})})$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c m_{H}$, one obtains the double relation:
 \begin{equation}
 R/2\lambdabar_{H} = (M/m^{\prime}_{e})^{1/2} = \hbar c/G m_{e} m_{p}
 \end{equation}
