--- a/test.tex
+++ b/test.tex
@@ -162,24 +162,24 @@ In the same manner, this article prefigures \textit{the fundamental theory, but 
 \begin{figure*}
 \centering
 \includegraphics[width=\textwidth,height=14cm]{./figures/figure}
-\caption{The Topological Axis. Double natural logarithms (y = lnln(Y)) of main dimensionless physical quantities 
+\caption{The Topological Axis. The double natural logarithms (y = lnln(Y)) of main dimensionless physical quantities 
 (Y) corresponds to the String dimension series n = 4k + 2, from k = 0 to k = 7, showing the Bott
 periodicity 8 [19] which is at the origin of the name `Topological Axis`. 
 \textit{With unit the Electron Compton wavelength, in the macro-physics side}, the Universe circumference 
     is tied to the bosonic critical dimension 26, while Bott reduction leads to n = 18 (thermal photon, 
-    tied to the the mammal wavelength through the Sternheimer scale factor j), n = 10, (super-string 
+    tied to the the mammal wavelength through the Sternheimer scale factor j (section 8.2), n = 10, (super-string 
     dimension, Hydrogen atom), and n = 2 (string). For the number 24 of transverse dimensions, it is
-    the Kotov length, through a factor 2$\pi a$, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant, it means the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years). For $k \approx e^{2}$, $y \approx 2e$, it is the Grandcosmos radius.
+    the Kotov length (section 4.3), through a factor 2$\pi a$, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant, it means the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years). For $k \approx e^{2}$, $y \approx 2e$, it is the Grandcosmos radius (section 3).
    \textit{With the same unit, the Electron Compton wavelength, in the micro-physics side}, the Space-Time-Matter
-    Holic dimension n = 30 is tied to $c$ times the cosmic Supercycle period, while Bott reductions lead to the gauge bosons:
-    n = 22 (GUT bosons, $10^{16} GeV$), n = 14 (weak bosons) and n = 6 (massive gluons, about 10 MeV).
-    For the superstring n = 10, it is the Pion. For $k \approx \pi$, n $\approx \gamma \times \Gamma$, Y $\approx 496^2$ 
+    Holic dimension n = 30 (section 6) is tied to $c$ times the cosmic Supercycle period (section 5), while Bott reductions lead to the gauge bosons:
+    n = 22 (GUT bosons, $10^{16} GeV$), n = 14 (weak bosons) and n = 6 (textit{massive} gluons, about 10 MeV).
+    For the superstring n = 10, it is the Pions. For $k \approx \pi$, n $\approx \gamma \times \Gamma$, Y $\approx 496^2$ 
     the square of the Green-Schwarz string dimension and the tenth root of the Monster cardinal, it is
-    the Brout-Englert-Higgs boson (125 GeV). For k $\approx 2e^e$, it is the Topon, the visible Universe wavelength,
-    which identifies with the mono-radial unit length of the Bekenstein-Hawking Universe entropy.
+    the Brout-Englert-Higgs boson (125 GeV). For k $\approx 2e^e$, it is the topon, the visible Universe wavelength,
+    which identifies with the mono-radial unit length of the Bekenstein-Hawking Universe entropy (section 3).
    \textit{With unit the electron mass}, n = 24 would correspond to the photon mass, while n $\approx \Gamma$, 
     to the graviton mass.
-    \textit{With unit the Kotov length}, the Holic dimension n = 30 corresponds to the Monster cardinal, 
+    \textit{With unit the Kotov length}, the holic dimension n = 30 corresponds to the Monster cardinal, 
     apart a $\sqrt2$ factor.}
     The central dimension is n = 16, suggesting that the whole schema is tied to the Eddington's matrix $16 \times 16$.
 \label{fig:figure_label}
@@ -228,20 +228,20 @@ R/2\lambdabar_{H} = (M/m^{\prime}_{e})^{1/2} = \hbar c/G m_{e} m_{p}
 So, while the two pillars of Physics, Relativity and Quantum Theory are unable to conciliate Gravitation 
 and Particle Physics, the third pillar, Statistical Physics, directly makes this connection in cosmology \cite{Eddington}.
 
-Recall that, contrary to what is often stated, quantum physics does not limit to micro-physics. Indeed, the exclusion principle applies in both solid state physics and in stellar physics. In particular, for a star containing $N_s$ atoms, in which the pressure has reached the quantum degeneracy value (case of white dwarfs), exclusion principle applies for electrons, and the radius star is about $R/N_{s}^{1/3}$ \cite{Sanchez1}. So the formula giving the Hubble radius $R$, a very difficult measurement which puzzled a whole century, was already contained in astrophysics textbooks. 
+Recall that, contrary to what is often stated, quantum physics does not limit to micro-physics. Indeed, the exclusion principle applies in both solid state physics and in stellar physics. In particular, for a star containing $N_s$ atoms, in which the pressure has reached the quantum degeneracy value (case of white dwarfs), exclusion principle applies for electrons, and the radius star is about $R/N_{s}^{1/3}$ \cite{Sanchez1}. So the formula giving the Hubble radius $R$, a very difficult measurement which puzzled a whole century, was implicitly contained in astrophysics textbooks. 
 The universe radius amazingly appears as the limit of a mono-atomic star radius, for which the electrons are in degeneracy state. Eddingon was aware of this Cosmologic Exclusion Principle, but could not conclude since, at his epoch, the Hubble measurement for $R$ was false by an order of magnitude.
 
-The reason for this discrepancy is that Lema\^itre and Hubble considered galaxies of the Local Group, which do not participate the so-called space expansion. In fact, it is sufficient to introduce a repulsive force proportional to separation distance, for explanation of the steady-state exponential recession. There is no need of the so-called `dark energy`, the repulsive force is equivalent to reintroduce the Einstein cosmological constant with invariant value $1/R^{2}$. 
+The reason for this discrepancy is that textit{Lema\^itre and Hubble considered galaxies of the Local Group, which do not participate the so-called space expansion}. In fact, it is sufficient to introduce a repulsive force proportional to separation distance, for explanation of the steady-state exponential recession. There is no need of the so-called `dark energy`, the repulsive force is equivalent to reintroduce \textit the {Einstein cosmological constant, but with invariant value} $1/R^{2}$. 
 
-The distance for which this force exceeds attractive gravitation between galaxies is about $10^{6}$ light years \cite{Sanchez1}, which corresponds, in the Topological Axis, to the Atiyah Constant $\Gamma$, presented in the Section 8.2, see Fig 1.
+The distance for which this force exceeds attractive gravitation between galaxies is about $10^{6}$ light years \cite{Sanchez1}, a typical galaxy group radius, which corresponds, in the Topological Axis, to the Atiyah Constant $\Gamma$, (section 8.2), see Fig 1.
 
-In the steady-state cosmology, such a repulsive force between galaxy groups is necessary, in order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group, another evacuation mechanism must occur: \textit{it would be the role of massive black holes}.
+In the steady-state cosmology of Bondi, Gold and Hoyle \cite{Sanchez1}, such a repulsive force between galaxy groups is necessary, in order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group, another evacuation mechanism must occur: \textit{it would be the role of massive black holes}.
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The Toponic Holographic Quantification}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-In the steady-state cosmological model of Bondi, Gold and Hoyle \cite{Sanchez1}, the Perfect Cosmological Principle implies the invariance of the Universe mean mass density $\rho$ and the exponential recession of galaxy groups, with time constant $R/c$ being compensated by the appearance of $m_n$ massive neutrons at rate $c^{3} /Gm_{n}$, 
+In the above steady-state cosmological, the Perfect Cosmological Principle implies the invariance of the Universe mean mass density $\rho$ and the exponential recession of galaxy groups, with time constant $R/c$ being compensated by the appearance of $m_n$ massive neutrons at rate $c^{3} /Gm_{n}$, 
 corresponding to about one neutron by century in a cathedral volume. 
 The invariant visible Universe radius $R$ is then defined by the Schwarszchild relation, so that each point is the center of an equivalent $R$-radius black hole, of critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar_M = \hbar/Mc = 2l_{P}^{2} /R$, the above `Topon`. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
 Principle, until now devoted to 3D application only \cite{Bousso}:
