--- a/test.tex
+++ b/test.tex
@@ -162,25 +162,23 @@ In the same manner, this article prefigures \textit{the fundamental theory, but 
 \begin{figure*}
 \centering
 \includegraphics[width=\textwidth,height=14cm]{./figures/figure}
-\caption{The Topological Axis. The double natural logarithms (y = lnln(Y)) of main dimensionless physical quantities 
-(Y) corresponds to the String dimension series n = 4k + 2, from k = 0 to k = 7, showing the Bott
+\caption{textit{The Topological Axis}. The double natural logarithms (y = lnln(Y)) of the main dimensionless physical quantities (Y) corresponds to the special string dimension series n = 4k + 2, from k = 0 to k = 7, showing the Bott
 periodicity 8 [19] which is at the origin of the name `Topological Axis`. 
 \textit{With unit the Electron Compton wavelength, in the macro-physics side}, the Universe circumference 
-    is tied to the bosonic critical dimension 26, while Bott reduction leads to n = 18 (thermal photon, 
-    tied to the the mammal wavelength through the Sternheimer scale factor j (section 8.2), n = 10, (super-string 
-    dimension, Hydrogen atom), and n = 2 (string). For the number 24 of transverse dimensions, it is
-    the Kotov length (section 4.3), through a factor 2$\pi a$, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant, it means the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years). For $k \approx e^{2}$, $y \approx 2e$, it is the Grandcosmos radius (section 3).
+    is tied to the bosonic critical dimension 26, while Bott reduction leads to n = 18: thermal photon, (Cosmological Microwave Background) tied to the the mammal wavelength through the Sternheimer scale factor j (section 8.2), n = 10: super-string 
+    dimension, Hydrogen atom), and n = 2: string. For the number 24 of transverse dimensions, it is
+    the Kotov length (section 4.3), through a factor 2$\pi a$, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant (section 8.2), it means the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years). For $k \approx e^{2}$, $y \approx 2e$, it is the Grandcosmos radius (section 3).
    \textit{With the same unit, the Electron Compton wavelength, in the micro-physics side}, the Space-Time-Matter
     Holic dimension n = 30 (section 6) is tied to $c$ times the cosmic Supercycle period (section 5), while Bott reductions lead to the gauge bosons:
     n = 22 (GUT bosons, $10^{16} GeV$), n = 14 (weak bosons) and n = 6 (textit{massive} gluons, about 10 MeV).
-    For the superstring n = 10, it is the Pions. For $k \approx \pi$, n $\approx \gamma \times \Gamma$, Y $\approx 496^2$ 
+    For the superstring n = 10, there are the Pions. For $k \approx \pi$, n $\approx \gamma \times \Gamma$, Y $\approx 496^2$ 
     the square of the Green-Schwarz string dimension and the tenth root of the Monster cardinal, it is
     the Brout-Englert-Higgs boson (125 GeV). For k $\approx 2e^e$, it is the topon, the visible Universe wavelength,
     which identifies with the mono-radial unit length of the Bekenstein-Hawking Universe entropy (section 3).
    \textit{With unit the electron mass}, n = 24 would correspond to the photon mass, while n $\approx \Gamma$, 
-    to the graviton mass.
+    to the graviton mass \cite{sanchez 1}.
     \textit{With unit the Kotov length}, the holic dimension n = 30 corresponds to the Monster cardinal, 
-    apart a $\sqrt2$ factor.}
+    apart a $\sqrt2$ factor.} (section 5).
     The central dimension is n = 16, suggesting that the whole schema is tied to the Eddington's matrix $16 \times 16$.
 \label{fig:figure_label}
 \end{figure*}
