--- a/test.tex
+++ b/test.tex
@@ -42,7 +42,7 @@
 }\par
 \renewcommand{\baselinestretch}{1.0}
 \bigskip
-F. M. Sanchez$^1\!$, \ V. A. Kotov$^2\!$, \ M. Grosmann$^3$, \ D. Weigel$^4$, \ R. Veysseyre$^5$, \ C. Bizouard$^6$, \ N. Flawisky$^7$, \ D. Gayral$^8$, \ L. Gueroult$^9$\\
+F. M. Sanchez$^1\!$, \ V. A. Kotov$^2\!$, \ M. Grosmann$^3$, \ D. Weigel$^4$, \ R. Veysseyre$^5$,\\ \ C. Bizouard$^6$, \ N. Flawisky$^7$, \ D. Gayral$^8$, \ L. Gueroult$^9$\\
 {\footnotesize  $^1$ Pr. Universit\'{e} Paris 11, Orsay, France (retired).\rule{0pt}{12pt}
 E-mail: hol137@yahoo.fr\\
 $^2$Astronomer Crimean Astrophysical Observatory CrAO, Nauchny, Crimea, Russian Federation. vkotov43@mail.ru
