--- a/test.tex
+++ b/test.tex
@@ -165,8 +165,7 @@ In the same manner, this article prefigures \textit{the fundamental theory, but 
 \caption{\textit{The Topological Axis}. The double natural logarithms (y = lnln(Y)) of the main dimensionless physical quantities (Y) corresponds to the special string dimension series n = 4k + 2, from k = 0 to k = 7, showing the Bott
 periodicity 8 [19] which is at the origin of the name `Topological Axis`. 
 \textit{With unit the Electron Compton wavelength, in the macro-physics side}, the Universe circumference 
-    is tied to the bosonic critical dimension 26, while Bott reduction 8 leads to n = 18: thermal photon (Cosmological Microwave Background) tied to the the mammal wavelength through the Sternheimer scale factor j (section 8.2), n = 10: super-string 
-    dimension, Hydrogen atom), and n = 2: string. For the number 24 of transverse dimensions, it is
+    is tied to the bosonic critical dimension 26, while Bott reduction 8 leads to n = 18: thermal photon (Cosmological Microwave Background) tied to the the mammal wavelength through the Sternheimer scale factor j (section 8.2), n = 10 (super-string dimension): Hydrogen atom, and n = 2: string. For the number 24 of transverse dimensions, it is
     the Kotov length (section 4.3), through a factor 2$\pi a$, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant (section 8.2), it is the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years, section 2.1). For $k \approx e^{2}$, $y \approx 2e$, it is the Grandcosmos radius (section 3).
    \textit{With the same unit, the Electron Compton wavelength, in the micro-physics side}, the Space-Time-Matter
     Holic dimension n = 30 (section 6) is tied to $c$ times the cosmic Supercycle period (section 5), while Bott reductions lead to the gauge bosons. The first one is for n = 22: GUT bosons, $10^{16}$ GeV), then n = 14: weak bosons and n = 6 (\textit{massive} gluons, about 10 MeV).
@@ -177,7 +176,7 @@ periodicity 8 [19] which is at the origin of the name `Topological Axis`.
    \textit{With unit the electron mass}, n = 24 would correspond to the photon mass, while n $\approx \Gamma$, 
     to the graviton mass \cite{sanchez 1}.
     \textit{With unit the Kotov length}, the holic dimension n = 30 corresponds to the Monster cardinal, 
-    apart a $\sqrt2$ factor.} (section 5).
+    apart a $\sqrt2$ factor.}
     \textit{The central dimension is n = 16, suggesting that the whole schema is tied to the Eddington's matrix $16 \times 16$}.
 \label{fig:figure_label}
 \end{figure*}
