--- a/test.tex
+++ b/test.tex
@@ -48,11 +48,11 @@ E-mail: hol137@yahoo.fr\\
 $^2$Astronomer Crimean Astrophysical Observatory CrAO, Nauchny, Crimea, Russian Federation. vkotov43@mail.ru
 $^3$ Pr. at Universit\'{e} Louis Pasteur, Strasbourg, France (retired). michelgrosmann@me.com
 $^4$ Pr. at Universit\'{e} of Dijon and Paris 6, France (retired). dominique.weigel@orange.fr
-$^5$ Pr. at Ecole Centrale, Paris, France (retired). renee.veysseyre@gmail.com
+\\ $^5$ Pr. at Ecole Centrale, Paris, France (retired). renee.veysseyre@gmail.com
 $^6$Astronomer at OBSPM, Paris, France. christian.bizouard@obspm.fr
-$^7$Architect / Math Instructor at Ecole Nationale Superieure d'Architecture, Paris Malaquais, France. flawisky@free.fr
-$^8$Computer Science Engineer. denis.gayral@epita.fr
-$^9$Lecturer at Ecole Nationale Superieure d'Architecture Paris Malaquais, France (retired). lgueroult@hotmail.com
+\\ $^7$Architect / Math Instructor at ENSA Ecole Nationale Superieure d'Architecture, Paris Malaquais, France. flawisky@free.fr
+\\$^8$Computer Science Engineer. denis.gayral@epita.fr
+$^9$Lecturer at ENSA Paris Malaquais, France (retired). lgueroult@hotmail.com
 
 }\par
 \medskip
