--- a/test.tex
+++ b/test.tex
@@ -239,20 +239,20 @@ In the steady-state cosmology of Bondi, Gold and Hoyle \cite{Sanchez1}, such a r
 
 In the above steady-state cosmological, the Perfect Cosmological Principle implies the invariance of the Universe mean mass density $\rho$ and the exponential recession of galaxy groups, with time constant $R/c$ being compensated by the appearance of $m_n$ massive neutrons at rate $c^{3} /Gm_{n}$, 
 corresponding to about one neutron by century in a cathedral volume. 
-The invariant visible Universe radius $R$ is then defined by the Schwarszchild relation, so that each point is the center of an equivalent $R$-radius black hole, of critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar_M = \hbar/Mc = 2l_{P}^{2} /R$, the above `Topon`. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
+The invariant visible Universe radius $R$ is then defined by the Schwarszchild relation, so that each topon is the center of an equivalent $R$-radius black hole, of critical mass $M = Rc^{2} /2G$ and topon wavelength $\lambdabar_M = \hbar/Mc = 2l_{P}^{2} /R$. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
 Principle, until now devoted to 3D application only \cite{Bousso}:
 \begin{equation}
 S_{BH} = A/4 = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}
 \end{equation}
-where $A$ is the horizon sphere area and $l_{P} = (G\hbar/c^{3} )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology use differential equations, which are not adapted to a single Universe, as Poincar\'{e} stated \cite{Sanchez1}, the Permanent Cosmology must favor such integral relations. This one uses the \textit{Archimedes Testimony tying the Disk Area to its Perimeter}.
+where $A$ is the horizon sphere area and $l_{P} = (G\hbar/c^{3} )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology use differential equations, which are not adapted to a single Universe, as Poincar\'{e} stated \cite{Sanchez1}, the Permanent Cosmology must favor such integral relations. Here it is the \textit{Archimedes Testimony tying the Disk Area to its Perimeter}.
 
 In the standard evolutionary view, the observed homogeneity of causally disconnected regions of space is known as the so-called `horizon problem`, and is at the origin of the awkward inflation hypothesis, which is unnecessary in the steady-state model. Indeed, the critical condition is provided by the above very definition of $R$.
 
-The cosmic wavelength $\lambdabar_{M}\sim 10^{-95} m$ breaks the `Planck's wall` by a factor $l_{P}/\lambdabar_{M}\sim 10^{61}$ : this explains why this holographic relation was long time unnoticed. Indeed, it was admitted that $l_{P}$ was the quantum of Space: in fact \textit{the Planck's length is an intermediate holographic length only}.
+The topon breaks the so-called `Planck's wall` by a factor $l_{P}/\lambdabar_{M}\sim 10^{61}$. This explains why this holographic relation was long time unnoticed. Indeed, it was admitted that $l_{P}$ was the quantum of space: in fact \textit{the Planck's length is an intermediate holographic length only}.
 
-Gravitational potential energy of a critical homogeneous sphere is $-(3/5)GM^{2}/R = -
-(3/10)Mc^{2}$, while the \textit{non-relativistic} kinetic energy of galaxies is $(3/10)Mc^{2}$. Their sum is therefore zero: the density of the so-called `dark energy` is compatible with 7/10, so that dark energy is a trivial false problem. 
-As recalled above, Relativity is a local theory that does not apply in cosmology at large: 
+the gravitational potential energy of a critical homogeneous sphere is $-(3/5)GM^{2}/R = -
+(3/10)Mc^{2}$, while the \textit{non-relativistic} kinetic energy of galaxies is $(3/10)Mc^{2}$ \cite#sanchez1}. Their sum is therefore zero: the density of the so-called `dark energy` is compatible with 7/10, so that dark energy is a trivial false problem. 
+The Relativity theory is a local theory that does not apply in cosmology at large: 
 galaxies actually reach speed $c$, and, crossing the horizon, enter a Grandcosmos of radius $R_{GC}$, given, as a first approximation, by the symmetrical holographic relation, here monochrome instead of the above mono-radial one:
 \begin{equation}
 S_{BH}\, = \pi(R/l_P )^{2} = 2\pi R^{(0)}_{GC} /l_{P}
@@ -267,32 +267,32 @@ as the spherical hologram representation of the outer Grandcosmos:
 \begin{equation}
 S^{\prime}_{BH}\, = \pi(R^{\prime}/l_{P})^{2} = 2\pi R_{GC} /l_{P}
 \end{equation}
-This value will be dramatically confirmed in the section 5 (Fig.6).
+This value will be confirmed in the section 5 (Fig.6).
 
 Assuming the Toponic Quantification Hypothesis, the mass of a particle is an exact sub-multiple 
-of the mass-equivalent $M$ of the visible Universe: $m = M/N_{m}$, and its canonical wavelength is 
+of the critical  mass $M$ of the visible Universe: $m = M/N_{m}$, and its canonical wavelength is 
 $N_m \lambdabar_{M}$, allowing the following holographic extension of the above mono-radial holographic conservation:
 \begin{equation}
 S_{BH} = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M} = 2\pi N_{m} R/\lambdabar_{m}
 \end{equation}
 This series of diametrical circles generate, by scanning, the approximation of a sphere: thus it goes 
-from disk to sphere. Note that this justifies the factor $\frac{1}{4}$ in above BH entropy. 
+from disk to sphere. Note that \textit{this justifies the factor $\frac{1}{4}$ in the BH entropy}. 
 But, for the approximation to be sufficient, \textit{the numbers $N_{m}$ must be very large}. In this way, the Cosmos-
-Computer can use the computational properties of the mathematical constants of the continuous analysis, such as $e$ and $\pi$ (See Section 4 and Discussion).
+Computer can use the computational properties of the mathematical constants of the continuous analysis, such as $e$ and $\pi$, see section 9 and 10 (Discussion).
 
 The immensity of the Cosmos thus receives a computational holographic explanation, which is much simpler than that of standard cosmology, where initial conditions, during Planck's time, would be adjusted with extreme precision, even with inflation. 
 
-With $N_{Ed} = 136 \cdot2^{256}$ the Eddington's large number, one observes that $N_{Ed}$ times the neutron mass, corrected by the ratio $H/p$, central in Section 4, gives, to 41 ppm the effective mass $3M/10$, so that:
+With $N_{Ed} = 136 \cdot2^{256}$ the Eddington's large number, one observes that $N_{Ed}$ times the neutron mass, corrected by the classical ratio $H/p$, gives, to 41 ppm, the effective mass $3M/10$, so that:
 \begin{equation}
 Mm_p = m_P^4/m_em_H\approx(10N_{Ed}/3)m_Hm_n 
 \end{equation}
 showing a kind of symmetry between the masses of particles. This directly involves Planck's mass $m_{P}$, which at the present time, has no known interpretation, except that it is close to the mass of the human ovocyte \cite{Sanchez1}. In this way, the local inertia is related to the distant masses, in accordance with the Mach principle, which the relativity theory does not explain. Another shortcoming of this theory is that it does not define any inertial frame. However, the Doppler as-symmetry of the cosmic background indicates that the speed of our local group of galaxies is about 630 km/s. The cosmic background is, therefore, tied to the Newton absolute frame, the Grandcosmos.
 
-The mathematical continuity is excluded by the above Computation Principle, so the time associated to the above 'topon' 
+The mathematical continuity is excluded by the above Computation Principle, so the time associated to the above 'topon': 
 \begin{equation}
 t_M = \lambdabar_{M} /c = \hbar/Mc^2 \approx 1.33 \times 10^{-104}s 
 \end{equation}
-is the new candidate for the `Chronon`, the `quantum of time`, so the oscillatory bounce has a frequency about $10^{104}Hz $ \cite{Sanchez2}.
+is the new candidate for the `Chronon`, the `quantum of time`, so the Oscillatory Bounce has a frequency about $10^{104}$ Hz  \cite{Sanchez2}.
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The Tachyonic Flickering Space-Time-Matter}
