--- a/test.tex
+++ b/test.tex
@@ -251,7 +251,7 @@ In the standard evolutionary view, the observed homogeneity of causally disconne
 The topon breaks the so-called `Planck's wall` by a factor $l_{P}/\lambdabar_{M}\sim 10^{61}$. This explains why this holographic relation was long time unnoticed. Indeed, it was admitted that $l_{P}$ was the quantum of space: in fact \textit{the Planck's length is an intermediate holographic length only}.
 
 the gravitational potential energy of a critical homogeneous sphere is $-(3/5)GM^{2}/R = -
-(3/10)Mc^{2}$, while the \textit{non-relativistic} kinetic energy of galaxies is $(3/10)Mc^{2}$ \cite#sanchez1}. Their sum is therefore zero: the density of the so-called `dark energy` is compatible with 7/10, so that dark energy is a trivial false problem. 
+(3/10)Mc^{2}$, while the \textit{non-relativistic} kinetic energy of galaxies is $(3/10)Mc^{2}$ \cite{Sanchez1}. Their sum is therefore zero: the density of the so-called `dark energy` is compatible with 7/10, so that dark energy is a trivial false problem. 
 The Relativity theory is a local theory that does not apply in cosmology at large: 
 galaxies actually reach speed $c$, and, crossing the horizon, enter a Grandcosmos of radius $R_{GC}$, given, as a first approximation, by the symmetrical holographic relation, here monochrome instead of the above mono-radial one:
 \begin{equation}
