--- a/test.tex
+++ b/test.tex
@@ -292,17 +292,15 @@ The mathematical continuity is excluded by the above Computation Principle, so t
 \begin{equation}
 t_M = \lambdabar_{M} /c = \hbar/Mc^2 \approx 1.33 \times 10^{-104}s 
 \end{equation}
-is the new candidate for the `Chronon`, the `quantum of time`, so the Oscillatory Bounce has a frequency about $10^{104}$ Hz  \cite{Sanchez2}.
+is the new candidate for the `Chronon`, the `quantum of time`, so the Oscillatory Bounce has a frequency about $10^{104}$ Hz  \cite{Sanchez2} and respects the CPT (Charge conjugation-Parity inversion-Time reversal) symmetry \cite{Sanchez1}. note that the tachyonic hypothesis is consistent with the non-local character of quantum mechanics.
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The Tachyonic Flickering Space-Time-Matter}
-\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
-
-The tachyonic hypothesis is consistent with the non-local character of quantum mechanics. The matter-antimatter flickering respects the CPT (Charge conjugation-Parity inversion-Time reversal) symmetry.
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}} 
 
 \subsection{The Single Electron Cosmology}
 
-The single-electron cosmology \cite{Sanchez1} uses the electron indeterminacy, which is the real basis of the Exclusion Principle, giving a horizon value $R_1$ only dependent of the Hydrogen radius $a^{\prime} = aH/p$, by respect to $\lambdabar_e$. It is the value for which the mean cosmic value is also the atomic one:
+The single-electron cosmology \cite{Sanchez1} uses the electron indeterminacy, which is the real basis of the Exclusion Principle, giving a horizon value $R_1$ only dependent of the principal value of the Hydrogen radius $a^{\prime} = aH/p$, by respect to $\lambdabar_e$. It is the value for which the mean cosmic value is also the atomic one:
 \begin{equation}
 \frac{\sum(1/n)}{\sum(1/n^{2})} = a^{\prime}
 \end{equation}
@@ -310,7 +308,7 @@ with the sum running from 2 to $R_{1} /\lambdabar_{e}$. This implies:
 $$
 R_{1} = \lambdabar_{e} exp((\pi^{2} /6 - 1)a^{\prime} + 1 - \gamma) \approx 15.77465 ~ Gly
 $$
-very close (0.4 ppm) to the following expression, where $p_{G} = P/2^{127/2}$, $\beta = (H - p)^{-1}$ is the Rydbergh correction factor and $p_{0} = 6\pi^{5}$ is the Lenz-Wyler value $p$ (Section 4):
+very close (0.4 ppm) to the following expression, where $p_{G} = P/2^{127/2}$, $\beta = (H - p)^{-1}$ is the Rydbergh correction factor and $p_{0} = 6\pi^{5}$ is the Lenz-Wyler value $p$ (Section 9.2):
 $$
 R_{1} = ( p_{G} /p_{0} )(\beta R R^{\prime})^{1/2}
 $$
@@ -318,25 +316,25 @@ Moreover, there is a direct connection with the Grandcosmos radius and the Topon
 \begin{equation}
 R_1^3/R_{GC}^2 \approx \lambdabar_M  
 \end{equation}
-this will be of paramount importance in section 7.3
+this will be of paramount importance in section 7.3.
 
 With the Kotov length $l_{K} = ct_{K}$ (see below), one notes that $(R/a_w l_K)^{1/2} $ is close to $\sqrt{a}$, while the replacement of $R$ by $R_{1}$ is about $4\pi$, the canonical form for $\sqrt{a}$, the deviation being compatible with $p/p_{0}$:
 $$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. 
 
-This $t_K$ value will be confirmed, in the ppb range, by the value deduced from $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, see below, using values of $a_{w}$ and $a_{G}$ connecting, again in the ppb range, with $\Gamma$, the Atiyah Constant (section 4.5).
+This $t_K$ value will be confirmed, in the ppb range, by the value deduced from $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, see below, using values of $a_{w}$ and $a_{G}$ defined, connecting, again in the ppb range, in section 9.4. 
 
-From the Holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is associated with the photon mass. With the above value, it is $m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
-$m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $kg.
-The ratios with electron mass (Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant, see Section 4.8, while the ratio $M/m_{ph} \approx (3/e)O^2_M$, to 0.1\%, with the cardinal order $O_M$ of the Monster group.
+From the holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is associated with the photon mass. With the above value, it is $m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
+$m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $ kg.
+The ratios with electron mass (Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant (section 8.2) The ratio $M/m_{ph} \approx (3/e)O^2_M$, to 0.1\%, with $O_M$ the cardinal order of the Monster group.
 
 \subsection{The Cosmic Coherent Oscillation (CCO)}
 
-The Kotov non-Doppler cosmic oscillation \cite{Sanchez1} is not considered seriously, since it seems to violate the most basic prerequisite of physics, the generality of Doppler phenomena. Interpretingthis as a tachyonic phenomenon, we identified the Kotov period $t_{K} \simeq 9600.06(2) s$, taking the electron characteristic time $t_{e} = \lambdabar_{e} /c$ as unit, to the simplest relation eliminating $c$ between $a_{G}$ and $a_{w}=
-\hbar^{3} /G_{F} m_{e}^{2} c$, the well measured $(10^{-7})$ dimensionless electroweak coupling constant $a_{w}$ :
+The Kotov non-Doppler cosmic oscillation \cite{Sanchez1} is not considered seriously, since it seems to violate the most basic prerequisite of physics, the generality of Doppler phenomena. Interpreting this as a tachyonic phenomenon, we identified the Kotov period $t_{K} \simeq 9600.06(2) s$, taking the electron characteristic time $t_{e} = \lambdabar_{e} /c$ as unit, to the simplest relation eliminating $c$ between $a_{G}$ and $a_{w}=
+\hbar^{3} /G_{F} m_{e}^{2} c$, the well measured $(3\cdot 10^{-7})$ dimensionless electroweak coupling constant $a_{w}$ :
 \begin{equation}
 t_{K} / t_{e} = (a_{G} a_{w})^{1/2}
 \end{equation}
-The weak coupling constant \cite{Carr} $a_{w} = (E_{F} /m_{e} c^{2} )^{2}$ is defined from the Fermi energy 
+This weak coupling constant \cite{Carr} $a_{w} = (E_{F} /m_{e} c^{2} )^{2}$ is defined from the Fermi energy 
 $
 E_{F} \approx 292.806161(6) GeV \approx 573007.33(25) m_{e} c^{2}
 $, itself tied to the weak force constant 
@@ -354,7 +352,7 @@ $$\begin{array}{ll}
 \qquad  \qquad \Leftrightarrow \\
 G \approx 6.6754552 \times 10^{-11} kg^{-1} m^{3} s^{-2} \\
 \end{array}$$
-This value will be confirmed, in the ppb range, in Section 4.
+This value will be confirmed, in the ppb range, in Section 9.
 
 \subsection{The omnipresence of CC0 in astrophysics}
 
@@ -406,9 +404,9 @@ It was shown in fact, that a number of superfast, with periods inferior to 2 day
 
 \subsection{The Tifft, Arp and Pioneer effects}
 
-Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift \cite{Tifft}. Now, this speed corresponds to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$ where $r_{e} = \lambdabar_e/a$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass \cite{Sanchez1}.
+Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift \cite{Tifft}. Now, this speed corresponds to the quantum resonance: $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$ where $r_{e} = \lambdabar_e/a$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass \cite{Sanchez5}.
 
-The Halton Arp observations of chains of galaxies with different redshifts \cite{Arp} was also rejected. But it could be the sign of the galactic regeneration constantly maintaining the visible Universe mass: this is confirmed by the following confirmation of the invariance of the mean mass density $\rho_{c}$.
+The Halton Arp observations of chains of galaxies with different redshifts \cite{Arp} was also rejected. But it could be the sign of the galactic regeneration constantly maintaining the visible Universe mass: this is sustained by the following section proving the invariance of the mean mass density $\rho_{c}$.
 
 Much controversial is the Pioneer deceleration \cite{Nieto} $g_{Pi} \approx 8.7 \times 10^{-10} ms^{-2}$. It corresponds to he Pioneer time $t_{Pi} = c/g_{Pi} \approx 3.4 \times 10^{17} s $ close to $t = R/c \approx 4.3587 \times 10^{17} s $. The following section will show a connection between the Kotov, Tifft and Pioneer effects.
 
