--- a/test.tex
+++ b/test.tex
@@ -158,6 +158,7 @@ So, when Proust and Dalton found whole numbers in chemical reactions, they were 
 
 In the same manner, this article prefigures \textit{the fundamental theory, but precising its arithmetical foundation: the Holic Principle}, recalled in section 6. Thus, there must exist multi-base algorithms able to explain the compatibility between these two principles, Hierarchy and Computation, which seems at first sight contradictory. 
 
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
 \begin{figure*}
 \centering
