--- a/test.tex
+++ b/test.tex
@@ -449,10 +449,10 @@ analysis starting from $\hbar$, $G$ and $m$, the Electron-Proton-Neutron mean ma
 approximation for $R/2$. Indeed, in the Hypothesis of a coherent Cosmos, it is logical to discard $c$
 which is far two small a speed. This has not been observed during one century since $c$ is always
 believed to be the single mandatory foundation of space-time. The warning of Poincar\'{e}, the true
-discoverer of Relativity: `use 4D space, but do not confound Space and Time` has long been
+discoverer of Relativity: \textiy{`use 4D space-time, but do not confound Space and Time`} has long been
 forgotten, and physicists have unwisely put $c = 1$ in their equations.
 
-In his three first minutes of cosmology, the first author obtained the length:
+In his three first minutes of cosmology (sept.1997), the first author obtained the length:
 \begin{equation}
 l \{\hbar,G,m\} = \hbar^{2} /Gm^{3} \approx R/2
 \end{equation}
@@ -471,37 +471,36 @@ sustain, meaning that $\rho_{c}$ must be considered a fundamental constant. This
 t\{\hbar,\rho_{c} ,G\}\, = 1/\rho_{c}^{1/2} G^{1/2} = (R/c) (8\pi/3)^{1/2}.
 \end{equation}
 This idea of $\rho_{c}$ being a fundamental constant permits to define $R$ without any ambiguity: this is the 
-radius of the sphere containing critical mass. This means each topon is the center of an equivalent black hole,
-justifying the above application of the Bekenstein-Hawking entropy. 
+radius of the sphere containing a critical mass. This justifies the above application of the Bekenstein-Hawking entropy. 
 
 Opponents would say that the
-center of a black hole presents a singularity: that is indeed the case in the above flickering Space-
+center of a black hole presents a singularity: that is indeed the casefor the topon in the above flickering Space-
 Mass-Time hypothesis. Other will argue that the flying galaxies cannot reach the celerity $c$ at
-horizon, but it must be recognized that Relativity is a local theory, so do not apply to cosmology at large.
+horizon, but, as recalled above, Relativity is a local theory, so do not apply to cosmology at large.
 Indeed, even General Relativity in unable to define what is a Galilean frame, while the Foucault
 pendulus shows it directly, realizing the Cosmic Microwave Background frame, identified with the
 Grandcosmos frame, as seen above.
 
 Introducing the Fermi constant $G_{F}$, the associated $c$-free length is very particular, to $1.7\%$:
 $$l\{\hbar,\rho_{c},G_{F}\} = \hbar/\rho_{c}^{1/2} G_{F}^{1/2} \approx 9.07154 \times 10^{9} m \approx \lambdabar_{e}^{2}/l_{P}$$
-Now, the following mandatory $c$-free times are close to each over $(0.7\%)$:
+Now, most dramatically, the following mandatory $c$-free times are close to each over $(0.7\%)$:
 \begin{equation}
 T\{\hbar,\rho_{c} ,G_{F} \}\, = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s
 \end{equation}
 \begin{equation}
 T^{\prime}\{\hbar,G,m\} = \hbar^{3} /G^{2} m^{5} \approx 5.5224 \times 10^{57} s
 \end{equation}
-One would conceive it as the periodic time of a Super-cycle, which matches Topological Axis at n = 30,
-the holic dimension (see below), to 4\%. Comparing $T$ with the Kotov Non-Doppler Cosmic
+One would conceive it as the periodic time of a Super-cycle, which matches the Topological Axis at n = 30,
+the holic dimension (see section 6), to 4\%. Comparing $T$ with the Kotov Non-Doppler Cosmic
 Oscillation period $t_{K} \approx 9600.60(2)$ s, one observes, to $0.04\%$:
 $$T/t_{K} \approx O_{M} /\sqrt{2}$$
-where $O_{M}$, the cardinal order of the Monster Group, have been detected in the Section 2.3.1, again in relation with the Kotov period. Eliminating the later, this introduces the above $t_0$ chronon :
+where $O_{M}$, the cardinal order of the Monster Group, have been detected in the Section 2.3.1, again in relation with the Kotov period. Eliminating the later, this introduces the above $t_M$ chronon :
 \begin{equation}
-T/t_0 \approx (3/e\sqrt{2})O_M^3
+T/t_M \approx (3/e\sqrt{2})O_M^3
 \end{equation}
-The simplest interpretation follows: this is the number of quantum events in a Super-cycle of period $T$, in a perfectly deterministic Cosmos. 
+The simplest interpretation follows: \textit{this is the number of quantum events in a Super-cycle of period $T$, in a perfectly deterministic Cosmos}. 
 
-The  Monster  Group,  the largest of 26 sporadic groups, is suspected by some researchers to play a central role in Physics: indeed string theory allows a bridge between apparently no-connected mathematical theories \cite{Borcherds}. see below the dramatic properties of $O_M^3$.
+The  Monster  Group,  the largest of 26 sporadic groups, is suspected by some researchers to play a central role in Physics: indeed string theory allows a bridge between apparently no-connected mathematical theories \cite{Borcherds}. See below the dramatic properties of $O_M^3$.
 
 Introducing the above Pioneer abnormal deceleration $g_{Pn}$, one gets the time: 
 $
