--- a/test.tex
+++ b/test.tex
@@ -449,7 +449,7 @@ analysis starting from $\hbar$, $G$ and $m$, the Electron-Proton-Neutron mean ma
 approximation for $R/2$. Indeed, in the Hypothesis of a coherent Cosmos, it is logical to discard $c$
 which is far two small a speed. This has not been observed during one century since $c$ is always
 believed to be the single mandatory foundation of space-time. The warning of Poincar\'{e}, the true
-discoverer of Relativity: \textiy{`use 4D space-time, but do not confound Space and Time`} has long been
+discoverer of Relativity: \textit{`use 4D space-time, but do not confound Space and Time`} has long been
 forgotten, and physicists have unwisely put $c = 1$ in their equations.
 
 In his three first minutes of cosmology (sept.1997), the first author obtained the length:
