--- a/test.tex
+++ b/test.tex
@@ -517,25 +517,24 @@ confirms the above Planck's wall breakdown.
 \section{The Arithmetical Logic: Holic Principle}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-In the hypothesis of an Arithmetic Cosmos, the ultimate equations must be diophantine. The
+In the hypothesis of an Arithmetical Cosmos, the ultimate equations must be diophantine. The
 simplest one is $T^{2} = L^{3}$, where $T$ is a time ratio and $L$ a length one, resolved, since 2 and 3 are 
-co-prime, by $$T^{2} = L^{3} = N^{6}$$ where N is a whole number, meaning the classical 6D space of classical point mechanics. Considering the exponents, this particularizes the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent study \cite{Bars}.
+co-prime, by $$T^{2} = L^{3} = N^{6}$$ where N is a whole number, showing the classical 6D phase-space of classical point mechanics. Considering the exponents, this particularizes the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent study \cite{Bars}.
 
-This is the degenerate arithmetic form of the spatio-temporal holographic principle.
+\textit{'This is the degenerate arithmetic form of the spatio-temporal holographic principle}.
 
-This is also the 3rd Kepler's law, but its diophantine form gives $L = n^{2}$, the orbit law in the Hydrogen atom and in our
-Gravitational Molecule model, where the visible Universe corresponds to the first orbital,
-suggesting the existence of a Grandcosmos, as the Topological Axis does also, which favors the
-dimension n = 30, the natural extension of the above:
+This is also the third Kepler's law, but its diophantine form gives $L = n^{2}$, the orbit law in the Hydrogen atom and in our
+Gravitational Molecule model, where the visible Universe corresponds to the first orbital. this suggests at once the existence of a Grandcosmos. this is also confirmed by the overall symmetry of the Topological Axis does also, which, moreover, favors the
+dimension n = 30, the natural extension of the above diophantine equation:
 \begin{equation}
 T^{2} = L^{3} = M^{5} = N^{30}
 \end{equation}
-where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This holic dimension 30 is the touchstone of the Topological axis, from which gauge bosons are deduced by Bott reductions [19] (Fig. 1)
+where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the $5^{th}$ power of its mass. This holic dimension 30 is the touchstone of the Topological axis, from which gauge bosons are deduced by Bott reductions [19] (Fig. 1)
 
-This is called the Holic Principle, relating to the apparent world. The Complete Holic
+This is called the Holic Principle, butlimted to the apparent MLT world. The Complete Holic
 Principle \cite{Sanchez4} involves a field term $F^{7}$, and so introduces the dimension $30 \times 7 = 210$. It is confirmed by (to 15 ppm, 1.1 ppm, 56 ppm):
 $$2/\delta \approx (R/\lambdabar_{e})^{1/210} \approx (1/2d_{e}) ln(pH)/lna \approx (1/d_e^{2})ln\tau/ln\mu$$
-where appear the masses of the heavy leptons (Section 9.5). This implies a dramatic geo-combinatorial relation between $a$ and $p$ : $p^{p^{2}} \approx (a^{2})^{a^{3}}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm:$\delta \approx e^{2/e^2}$, confirming the central role of $e$ (section 9.1).
+with the masses of the heavy leptons (Section 9.5). This implies a dramatic geo-combinatorial relation between $a$ and $p$ : $p^{p^{2}} \approx (a^{2})^{a^{3}}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm:$\delta \approx e^{2/e^2}$, confirming the central role of $e$ (section 9.1).
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The special holographic relations}
