--- a/test.tex
+++ b/test.tex
@@ -543,7 +543,7 @@ with the masses of the heavy leptons (Section 9.5). This implies a dramatic geo-
 The holographic technique is by far the most efficient way to treat huge information \cite{Grosmann}, based on the
 properties of a coherent wave. Now, the main lesson of modern physics is that everything (light \textit{and matter}) propagates by waves  (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary matrix of quantum mechanism: we haven shown that the quantum formalism is very similar to the holographic one, describing an interaction by a two-step holographic process. From these considerations and CCO, the masses of the photon and graviton has been confirmed (section 4.1).
 
-The students of the first author realized in 1987 a hologram by scanning a 1 mW security power laser beam on an area of about one squared meter. The emulsion depth 10 microns permitted false color to be obtained by varying illumination through a photo-mask, and use of a shrinkable emulsion chemical process. The information contained in this hologram reached $10^15$ bit,  obtained in 12 minutes of exposition. Then, the first author claimed \textit{'such an efficient way of dealing information must be used by Nature'}. Turning to the impressive data of Particle Physics, after an intensive study, holographic relations was indeed present, and its arithmetical form, the Hoilc Principle was exposed at ANPA (Cambridge) \cite{Sanchez4}. In sep. 1997, the Orsay University attribute a sabbatical year, giving time to the first author to reexaminre the foundation of cosmology, and in three minutes to deduce the half-radius of visible Universe, and  several weeks the scanning holography of section 3. After rejection by the Orsay university, this was put in March 1998 in a closed draft in the Acade^'mie des sciences de Paris with the title \texteit{ 'L'Univers conserve-t-il l-information ?'}.
+The students of the first author realized in 1987 a hologram by scanning a 1 mW security power laser beam on an area of about one squared meter. The emulsion depth 10 microns permitted false color to be obtained by varying illumination through a photo-mask, and use of a shrinkable emulsion chemical process. The information contained in this hologram reached $10^15$ bit,  obtained in 12 minutes of exposition. Then, the first author claimed \textit{'such an efficient way of dealing information must be used by Nature'}. Turning to the impressive data of Particle Physics, after an intensive study, holographic relations was indeed present, and its arithmetical form, the Hoilc Principle was exposed at ANPA (Cambridge) \cite{Sanchez4}. In sep. 1997, the Orsay University attribute a sabbatical year, giving time to the first author to reexaminre the foundation of cosmology, and in three minutes to deduce the half-radius of visible Universe, and  several weeks the scanning holography of section 3. After rejection by the Orsay university, this was put in March 1998 in a closed draft in the Academie des sciences de Paris with the title \texteit{ 'L'Univers conserve-t-il l-information ?'}.
 
 Strangely enough, at the same epoch when the first author was blocked (1990-1995), a Holographic Principle has been coined by some theoreticians \cite{Bousso}, which were not specialists in this domain. The origin of this appellation is not clear. One can think that the name comes from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D (an idea of temporal holography proposed in the author's thesis in 1975). in fact, the standard holographic Principle is limted to the Palnk area. Thus, it is natural to suppose that they are other holographic wavelengths. In fact \textit{the Topological Axis is the reunion of height 1D-2D holographic relations}. We present here three more significant examples. 
 
