--- a/test.tex
+++ b/test.tex
@@ -564,14 +564,13 @@ Note that $e^{a}$ is also compatible with the half volume of the proton, with
 the Planck length as unit.
 
 So, while General Relativity and Unitary Quantum physics disagree about the nature of Space-Time, especially the non-locality phenomena, they agree for complete determinism, leading to the collapse of the
-Copenhagen statistical interpretation. The hidden variables exist really: it is the Cosmos ! Heisenberg
-relations would be only Fourier transform manifestations of Wave Mechanics.
+Copenhagen statistical interpretation. 
 
-The wien wavelength enters (0.03 \%):
+The Wien wavelength enters (0.03 \%):
 \begin{equation}
 l_{CMB} / \lambdabar_e \approx P/pH a^3
 \end{equation}
-showing evidence for the invariance of the cosmic temperature, and confirmed in the following section. 
+confirming the invariance of the cosmic temperature. 
 
 \subsection{The Cosmic Temperature}
 
@@ -589,7 +588,7 @@ the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$, 
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
 the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137.
 
-\subsection{The Holic Principle and Cosmic Coherent Oscillation}
+\subsection{The Holic Principle and CCO}
 
 The HB entropy of the sphere of radius $R^{\prime} = 2r_e^3 / l_P^ 2$, where $r_e = \lambdabar_e /a $ is the electron classical radius, which is the holographic reduction of the Grandcosmos (section 3), verifies the relation: $\pi(R^{\prime}/l_P)^2 = (pi/2)(R^{\prime}/r_e)^3 $, i.e. with a wrong geometric coefficient. However, the HB entropy of the visible Universe shows a nearly geometric term, with imprecision $\sqrt{4/3\delta} \approx 0.17$:
 \begin{equation}
@@ -607,8 +606,8 @@ The deviation of Eq. (27) is very close to that of Eq.(10), inducing, to 17 ppm 
 \begin{equation}
  (R_{GC}l_P/Rr_e)^2 \approx (R_1l_K/Rr_e)^3 \approx \mu^{35}(p/H)^2/ln2
 \end{equation}
-showing a holic form, involving the Muon/Electron mass ratio $mu$ (see section 9.5).
-Taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^2/(R_GC)l_P)^2$, this leads to a number reduced in the ratio $\delta^3$, where the fourth root shows the Koide constant $p_K$, characteristic of the two Heavy Leptons (Eq. 67) (17 ppm and 1.8 ppm) :
+showing a holic form, involving the Muon/Electron mass ratio $\mu$ (see section 9.5).
+Taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^2/(R_GC)l_P)^2$, this leads to a number reduced in the ratio $\delta^3$, where the fourth root shows the Koide constant $p_K$, characteristic of the two Heavy Leptons (section 9.5) (17 ppm and 1.8 ppm) :
 \begin{equation}
 r_/\lambdabar_M \approx (R_1l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4
 \end{equation}
@@ -632,15 +631,14 @@ this precises a known relation (0.1 \%) in Particle Theory: $a_w/WZ \approx \sqr
 \subsection{The Eddington's constant 137}
 
 The initial Eddington's proposal for $a$ was the whole number 136, as the number of independent parameters in the symmetric matrix $16 \times 16$. Note that \textit{n = 16 is the central dimension of the Topological Axis}. Later, one unity was added, becoming 137, a number which intrigued many physicists for a century, but apparently nobody highlighted it has a fundamental mathematical property: it appears as a Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
-series: 3,11,5,137,7,11, showing a symmetry between the 11 dimensions of M theory (a synthesis of five string theories) and the 4 of space-time. Indeed: $137 = 11^{2} + 4^{2}$, while, as seen above:$11/4 = (\lambda_{CNB}/\lambda_{CMB})^{3}$
+series: 3,11,5,137,7,11, showing a symmetry between the 11 dimensions of M theory (a synthesis of five string theories) and the 4 of space-time. Indeed: $137 = 11^{2} + 4^{2}$, while, as seen above: $11/4 = (\lambda_{CNB}/\lambda_{CMB})^{3}$
 
 Since Riemann series are tied to the prime number distribution, it seemss odd and incredible that mathematicians
 have not point out the primes appearing in the harmonic series since it is the single pole. It seems
 that the basic precept `all occurs in the pole` was forgotten in this case. 
 
 As ancient Egyptians used only fractions of type $1/n$, they were certainly aware of this particular harmonic series: 
-$S_{5} = 137/60$
-Indeed it appears in the Ptolemaic approximation for $\pi$: $\pi_{Pt} = 377/120 = 2 +  S_{5}/2$.
+$S_{5} = 137/60$. Indeed it appears in the Ptolemaic approximation for $\pi$: $\pi_{Pt} = 377/120 = 2 +  S_{5}/2$.
 
 Recall that the electrical constant $a$ characterizes the force $$F =\hbar c/al^{2}$$ between two l-distant
 elementary charges, where $a$ appears central in Atomic Physics and in many fine-tuning relations \cite{Carr}. It is
@@ -661,7 +659,7 @@ compatible with measurement $a \approx 137.035999139(31)$ in:
 \begin{equation}
 ln137/ln(a/137) \approx (2+135/d_{e})^{2}
 \end{equation}
-meaning the ratio $a/137$ acts as a canonical ratio. Indeed, the Bizouard constant $f$, precising \cite{Sanchez1} the inverse of the standard 'strong coupling constant' 0.1184(7): $$f = a_w/2\pi(pH)^{3/2} \approx 8.43450$$ appears as a computation base, in the following dramatic relations, to 0.3, 0.2, 0.7 \% and 22 ppb ! (confirmation of $G$ value):
+meaning the ratio $a/137$ acts as a canonical ratio. Indeed, the Bizouard constant $f$, precising \cite{Sanchez1} the inverse of the standard 'strong coupling constant' 0.1184(7): $$f = a_w/2\pi(pH)^{3/2} \approx 8.43450$$ appears as a computation base, in the following dramatic relations, to 0.3, 0.2, 0.7 \% and 22 ppb:
 $$(a/137)^F \approx 3^a \approx f^{f^2}/\pi \approx (O_B/f)^2 \approx P^4 (2/3)^a (p/p_0)^2 $$
 proving that the base 3, \textit{the optimal whole number basis}, is also used by the Cosmos as well as $O_B$, the cardinal order  of the Baby Monster (as confirmed below). 
 Note that while $R/\lambdabar_e \approx 2^{128}$, to 0.6 \%, $R^{\prime}/\lambdabar_e \approx 27^{27}$, with $27 = 3^3$ to 0.03 \%  Moreover, to 27 ppb:
